# CMakeList.txt : CMake project for BaumInformTestProject, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (BaumInformTestProject "main.cpp"  "Client.h" "Client.cpp" "Server.h" "Server.cpp")
target_link_libraries(BaumInformTestProject PUBLIC pthread)

if (CMAKE_VERSION VERSION_GREATER 3.12)
  set_property(TARGET BaumInformTestProject PROPERTY CXX_STANDARD 20)
endif()

# TODO: Add tests and install targets if needed.
